force-app/main/default/objects/EMS_EM_Request__c/EMS_EM_Request__c.object-meta.xml
<CustomObject>
    <label>Request</label>
    <nameField>
        <displayFormat>R_{00000}</displayFormat>
        <label>Request Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>