force-app/main/default/objects/EMS_EM_Request__c/fields/Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Number__c</fullName>
    <label>Account Number</label>
    <length>16</length>
    <type>Text</type>
</CustomField>