force-app/main/default/objects/EMS_EM_Request__c/fields/Approver__c.field-meta.xml
<CustomField>
    <fullName>Approver__c</fullName>
    <formula>Contact__r.EMS_EM_HR_Assigned__r.FirstName &amp; &apos; &apos; &amp;  Contact__r.EMS_EM_HR_Assigned__r.LastName</formula>
    <label>Approver</label>
    <type>Text</type>
</CustomField>