force-app/main/default/objects/EMS_EM_Request__c/fields/EMS_EM_Add_Education__c.field-meta.xml
<CustomField>
    <fullName>EMS_EM_Add_Education__c</fullName>
    <label>What do you want to add?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Degree</fullName>
            </value>
            <value>
                <fullName>Certificate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>