force-app/main/default/objects/EMS_EM_Request__c/fields/EMS_EM_CA_State_Old__c.field-meta.xml
<CustomField>
    <fullName>EMS_EM_CA_State_Old__c</fullName>
    <label>State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>