force-app/main/default/objects/EMS_EM_Request__c/fields/EMS_EM_Contact_Number_Old__c.field-meta.xml
<CustomField>
    <fullName>EMS_EM_Contact_Number_Old__c</fullName>
    <label>Contact Number</label>
    <type>Phone</type>
</CustomField>