force-app/main/default/objects/EMS_EM_Request__c/fields/EMS_EM_Current_Address__c.field-meta.xml
<CustomField>
    <fullName>EMS_EM_Current_Address__c</fullName>
    <label>Current Address</label>
    <type>TextArea</type>
</CustomField>