force-app/main/default/objects/EMS_EM_Request__c/fields/EMS_EM_Degree__c.field-meta.xml
<CustomField>
    <fullName>EMS_EM_Degree__c</fullName>
    <label>Degree</label>
    <length>18</length>
    <type>Text</type>
</CustomField>