force-app/main/default/objects/EMS_EM_Request__c/fields/EMS_EM_DOW__c.field-meta.xml
<CustomField>
    <fullName>EMS_EM_DOW__c</fullName>
    <label>Date of wedding</label>
    <type>Date</type>
</CustomField>