force-app/main/default/objects/EMS_EM_Request__c/fields/EMS_EM_ED_Address_Old__c.field-meta.xml
<CustomField>
    <fullName>EMS_EM_ED_Address_Old__c</fullName>
    <label>Address</label>
    <type>TextArea</type>
</CustomField>