force-app/main/default/objects/EMS_EM_Request__c/fields/EMS_EM_ED_Email__c.field-meta.xml
<CustomField>
    <fullName>EMS_EM_ED_Email__c</fullName>
    <label>Email id</label>
    <type>Email</type>
</CustomField>