force-app/main/default/objects/EMS_EM_Request__c/fields/EMS_EM_Employee_Name__c.field-meta.xml
<CustomField>
    <fullName>EMS_EM_Employee_Name__c</fullName>
    <formula>Contact__r.FirstName  &amp; &apos; &apos;  &amp;  Contact__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Employee Name</label>
    <type>Text</type>
</CustomField>