force-app/main/default/objects/EMS_EM_Request__c/fields/EMS_EM_Level_of_Education__c.field-meta.xml
<CustomField>
    <fullName>EMS_EM_Level_of_Education__c</fullName>
    <label>Level of Education</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Graduation</fullName>
            </value>
            <value>
                <fullName>Post-Graduation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>