force-app/main/default/objects/EMS_EM_Request__c/fields/EMS_EM_PA_Zip_Old__c.field-meta.xml
<CustomField>
    <fullName>EMS_EM_PA_Zip_Old__c</fullName>
    <label>Zip</label>
    <length>6</length>
    <type>Text</type>
</CustomField>