force-app/main/default/objects/EMS_EM_Request__c/fields/EMS_EM_PAddress_Line_2__c.field-meta.xml
<CustomField>
    <fullName>EMS_EM_PAddress_Line_2__c</fullName>
    <label>Address Line 2</label>
    <type>TextArea</type>
</CustomField>