force-app/main/default/objects/EMS_EM_Request__c/fields/EMS_EM_Raised_On__c.field-meta.xml
<CustomField>
    <fullName>EMS_EM_Raised_On__c</fullName>
    <formula>CreatedDate</formula>
    <label>Raised On</label>
    <type>Date</type>
</CustomField>