force-app/main/default/objects/EMS_EM_Request__c/fields/EMS_EM_Request_Type__c.field-meta.xml
<CustomField>
    <fullName>EMS_EM_Request_Type__c</fullName>
    <label>Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Address Details</fullName>
            </value>
            <value>
                <fullName>Bank Details</fullName>
            </value>
            <value>
                <fullName>Education Details</fullName>
            </value>
            <value>
                <fullName>Emergency Details</fullName>
            </value>
            <value>
                <fullName>Personal Details</fullName>
            </value>
            <value>
                <fullName>Vehicle Details</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>