force-app/main/default/objects/EMS_EM_Request__c/fields/EMS_EM_Spouse_Name_Old__c.field-meta.xml
<CustomField>
    <fullName>EMS_EM_Spouse_Name_Old__c</fullName>
    <label>Spouse Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>