force-app/main/default/objects/EMS_EM_Request__c/fields/EMS_EM_Vehicle_Number_old__c.field-meta.xml
<CustomField>
    <fullName>EMS_EM_Vehicle_Number_old__c</fullName>
    <label>Vehicle Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>