force-app/main/default/objects/EMS_EM_Request__c/fields/Personal_Email_Id__c.field-meta.xml
<CustomField>
    <fullName>Personal_Email_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Personal Email Id</label>
    <type>Email</type>
    <unique>true</unique>
</CustomField>