force-app/main/default/objects/EMS_EM_Request__c/fields/Personal_Email_Id_Old__c.field-meta.xml
<CustomField>
    <fullName>Personal_Email_Id_Old__c</fullName>
    <label>Personal Email Id</label>
    <type>Email</type>
</CustomField>