force-app/main/default/objects/EMS_EM_Request__c/fields/Vehicle_Number__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Number__c</fullName>
    <label>Vehicle Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>