force-app/main/default/objects/EMS_EM_Request__c/fields/What_do_you_want_to_change__c.field-meta.xml
<CustomField>
    <fullName>What_do_you_want_to_change__c</fullName>
    <label>What do you want to change?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contact Info</fullName>
            </value>
            <value>
                <fullName>Marital Status</fullName>
            </value>
            <value>
                <fullName>Update Resume</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>