force-app/main/default/objects/EMS_EM_Request__c/validationRules/EMS_EM_Account_Number_Enforce_Numeric.validationRule-meta.xml
<ValidationRule>
    <fullName>EMS_EM_Account_Number_Enforce_Numeric</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(REGEX(Account_Number__c,&quot;^[0-9]*$&quot;))</errorConditionFormula>
    <errorMessage>Invalid Account Number</errorMessage>
</ValidationRule>