force-app/main/default/objects/EMS_EM_Request__c/validationRules/EMS_EM_Bank_Details_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>EMS_EM_Bank_Details_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>IF( ISPICKVAL(EMS_EM_Request_Type__c, &quot;Bank Details&quot;), 
					  OR(ISBLANK( Account_Number__c ), ISBLANK( Account_Holder_Name__c ), ISBLANK( IFSC_Code__c ), ISPICKVAL(Bank_Name__c, &quot;&quot;))	  	,
							
							false)</errorConditionFormula>
    <errorMessage>Fill all Bank Details</errorMessage>
</ValidationRule>