force-app/main/default/objects/EMS_EM_Request__c/validationRules/EMS_EM_Certification_Details_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>EMS_EM_Certification_Details_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>IF( ISPICKVAL(EMS_EM_Request_Type__c, &quot;Education Details&quot;) &amp;&amp; ISPICKVAL(EMS_EM_Add_Education__c, &quot;Certificate&quot;),
ISBLANK( EMS_EM_Certification_Name__c ),false)</errorConditionFormula>
    <errorMessage>Fill all Certificate details</errorMessage>
</ValidationRule>