force-app/main/default/objects/EMS_EM_Request__c/validationRules/EMS_EM_Validation_DOW.validationRule-meta.xml
<ValidationRule>
    <fullName>EMS_EM_Validation_DOW</fullName>
    <active>true</active>
    <description>DOW should not be greater than Current date</description>
    <errorConditionFormula>IF( ISPICKVAL(EMS_EM_Mstatus__c, &quot;Married&quot;), (EMS_EM_DOW__c &gt; TODAY())  ,  

false)</errorConditionFormula>
    <errorDisplayField>EMS_EM_DOW__c</errorDisplayField>
    <errorMessage>DOW should not be greater than Current date</errorMessage>
</ValidationRule>