force-app/main/default/objects/EMS_EM_Request__c/validationRules/EMS_EM_Validation_ED_Name.validationRule-meta.xml
<ValidationRule>
    <fullName>EMS_EM_Validation_ED_Name</fullName>
    <active>true</active>
    <description>Allow only letters for Emergency details Name field</description>
    <errorConditionFormula>NOT(REGEX( EMS_EM_ED_Name__c ,&quot;^[a-z A-Z]*$&quot;))</errorConditionFormula>
    <errorDisplayField>EMS_EM_ED_Name__c</errorDisplayField>
    <errorMessage>Invalid Emergency details Name</errorMessage>
</ValidationRule>