force-app/main/default/objects/EMS_EM_Request__c/validationRules/EMS_EM_Validation_ED_Phone.validationRule-meta.xml
<ValidationRule>
    <fullName>EMS_EM_Validation_ED_Phone</fullName>
    <active>true</active>
    <errorConditionFormula>IF( ISPICKVAL(EMS_EM_Request_Type__c, &quot;Emergency Details&quot;),


IF(NOT(ISBLANK(EMS_EM_ED_Phone__c)||ISNULL(EMS_EM_ED_Phone__c)) , NOT(REGEX(EMS_EM_ED_Phone__c,&quot;^[0-9]{10}$&quot;)) , false)

,




false)</errorConditionFormula>
    <errorMessage>Invalid Mobile Number</errorMessage>
</ValidationRule>