force-app/main/default/objects/EMS_EM_Request__c/validationRules/EMS_EM_Validation_ED_Relationship.validationRule-meta.xml
<ValidationRule>
    <fullName>EMS_EM_Validation_ED_Relationship</fullName>
    <active>true</active>
    <description>restrict only letters for Emergency details Relationship field</description>
    <errorConditionFormula>NOT(REGEX( EMS_EM_ED_Relation__c ,&quot;^[a-z A-Z]*$&quot;))</errorConditionFormula>
    <errorDisplayField>EMS_EM_ED_Relation__c</errorDisplayField>
    <errorMessage>Invalid Emergency details Relationship</errorMessage>
</ValidationRule>