force-app/main/default/objects/EMS_EM_Request__c/validationRules/EMS_EM_Validation_For_ACCHolderName.validationRule-meta.xml
<ValidationRule>
    <fullName>EMS_EM_Validation_For_ACCHolderName</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(REGEX( Account_Holder_Name__c ,&quot;^[a-z  A-Z]*$&quot;))</errorConditionFormula>
    <errorMessage>Invalid Name</errorMessage>
</ValidationRule>