force-app/main/default/objects/EMS_EM_Request__c/validationRules/EMS_EM_Validation_For_Degree.validationRule-meta.xml
<ValidationRule>
    <fullName>EMS_EM_Validation_For_Degree</fullName>
    <active>true</active>
    <errorConditionFormula>IF( ISPICKVAL(EMS_EM_Request_Type__c, &quot;Education Details&quot;) &amp;&amp; ISPICKVAL(EMS_EM_Add_Education__c, &quot;Degree&quot;),
OR(ISBLANK( EMS_EM_Degree__c ), ISBLANK( EMS_EM_IName__c ), 
			ISBLANK( EMS_EM_Field_of_Study__c ), ISBLANK( EMS_EM_GDate__c ) ) ,

false)</errorConditionFormula>
    <errorMessage>Fill all Degree details</errorMessage>
</ValidationRule>