force-app/main/default/objects/EMS_EM_Request__c/validationRules/EMS_EM_Validation_For_Degree_Name.validationRule-meta.xml
<ValidationRule>
    <fullName>EMS_EM_Validation_For_Degree_Name</fullName>
    <active>true</active>
    <errorConditionFormula>IF(  ISPICKVAL(EMS_EM_Request_Type__c, &quot;Education Details&quot;) &amp;&amp; ISPICKVAL(EMS_EM_Add_Education__c, &quot;Degree&quot;),
NOT(REGEX(EMS_EM_Degree__c, &quot;[a-z A-Z]*&quot;)),false)</errorConditionFormula>
    <errorDisplayField>EMS_EM_Degree__c</errorDisplayField>
    <errorMessage>Invalid Degree Name</errorMessage>
</ValidationRule>