force-app/main/default/objects/EMS_EM_Request__c/validationRules/EMS_EM_Validation_Grad_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>EMS_EM_Validation_Grad_Date</fullName>
    <active>true</active>
    <errorConditionFormula>IF( ISPICKVAL(EMS_EM_Request_Type__c, &quot;Education Details&quot;) &amp;&amp; ISPICKVAL(EMS_EM_Add_Education__c, &quot;Degree&quot;), (EMS_EM_GDate__c &gt; TODAY()) ,

false)</errorConditionFormula>
    <errorDisplayField>EMS_EM_GDate__c</errorDisplayField>
    <errorMessage>Value must be earlier than current date</errorMessage>
</ValidationRule>