force-app/main/default/objects/EMS_EM_Request__c/validationRules/EMS_EM_Validation_PA_City.validationRule-meta.xml
<ValidationRule>
    <fullName>EMS_EM_Validation_PA_City</fullName>
    <active>true</active>
    <description>Enforce Letters for Permanent Address City</description>
    <errorConditionFormula>NOT(REGEX( EMS_EM_PA_City__c ,&quot;^[a-z A-Z]*$&quot;))</errorConditionFormula>
    <errorDisplayField>EMS_EM_PA_City__c</errorDisplayField>
    <errorMessage>Invalid City</errorMessage>
</ValidationRule>