force-app/main/default/objects/EMS_EM_Request__c/validationRules/EMS_EM_Validation_PA_State.validationRule-meta.xml
<ValidationRule>
    <fullName>EMS_EM_Validation_PA_State</fullName>
    <active>true</active>
    <description>Enforce Letters for Permanent Address State</description>
    <errorConditionFormula>NOT(REGEX( EMS_EM_PA_State__c ,&quot;^[a-z A-Z]*$&quot;))</errorConditionFormula>
    <errorDisplayField>EMS_EM_PA_State__c</errorDisplayField>
    <errorMessage>Invalid State</errorMessage>
</ValidationRule>