force-app/main/default/objects/EMS_EM_Request__c/validationRules/EMS_EM_Validation_PA_Zip.validationRule-meta.xml
<ValidationRule>
    <fullName>EMS_EM_Validation_PA_Zip</fullName>
    <active>true</active>
    <errorConditionFormula>IF( ISPICKVAL(EMS_EM_Request_Type__c, &quot;Address Details&quot;),


IF(NOT(ISBLANK(EMS_EM_PA_Zip__c)||ISNULL(EMS_EM_PA_Zip__c)) , NOT(REGEX(EMS_EM_PA_Zip__c,&quot;^[0-9]{6}$&quot;)) , false)

,




false)</errorConditionFormula>
    <errorMessage>Please enter 6 digit Zip code</errorMessage>
</ValidationRule>