force-app/main/default/objects/EMS_EM_Request__c/validationRules/EMS_EM_Validation_Personal_Phone.validationRule-meta.xml
<ValidationRule>
    <fullName>EMS_EM_Validation_Personal_Phone</fullName>
    <active>true</active>
    <errorConditionFormula>IF( ISPICKVAL(What_do_you_want_to_change__c, &quot;Contact Info&quot;),


IF(NOT(ISBLANK(EMS_EM_Contact_Number__c)||ISNULL(EMS_EM_ED_Phone__c)) , NOT(REGEX(EMS_EM_Contact_Number__c,&quot;^[0-9]{10}$&quot;)) , false)

,




false)</errorConditionFormula>
    <errorDisplayField>EMS_EM_Contact_Number_Old__c</errorDisplayField>
    <errorMessage>Invalid Personal Phone</errorMessage>
</ValidationRule>