force-app/main/default/objects/EMS_EM_Request__c/validationRules/EMS_EM_Validation_Spouse_Name.validationRule-meta.xml
<ValidationRule>
    <fullName>EMS_EM_Validation_Spouse_Name</fullName>
    <active>true</active>
    <description>VR for allow only letters in Spouse name</description>
    <errorConditionFormula>NOT(REGEX( EMS_EM_Spouse_Name__c ,&quot;^[a-z A-Z]*$&quot;))</errorConditionFormula>
    <errorDisplayField>EMS_EM_Spouse_Name__c</errorDisplayField>
    <errorMessage>Invalid Name format for Spouse Name</errorMessage>
</ValidationRule>